--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,6 @@ li,
 div {
     color: rgb(var(--text-color));
     font-family: var(--font-family);
-    font-weight: 400;
+    /* font-weight: 400; */
     text-decoration: none;
 }
