--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -32,6 +32,7 @@
 .navbar__links-container p{
     margin: 0 2rem;
     font-size: var(--font-size-text);
+    font-weight: 300;
 }
 
 .navbar__links-container a{
