--- a/src/components/projects/projectsRight.css
+++ b/src/components/projects/projectsRight.css
@@ -41,7 +41,8 @@
 
 .project__description{
     font-size: var(--font-size-annotations);
-    font-style: italic;
+    font-weight: 300;
+    /* font-style: italic; */
 }
 
 
@@ -54,7 +55,7 @@
 .project__btn{
     background: rgb(var(--primary-color));
     color: rgb(var(--text-color));
-    font-style: italic;
+    /* font-style: italic; */
     font-size: var(--font-size-annotations);
     padding: 0.7rem 1rem;
     border-radius: var(--border-radius);
