--- a/src/components/projects/responsiveProjects.css
+++ b/src/components/projects/responsiveProjects.css
@@ -50,7 +50,8 @@
 .responsive__projects-description{
     margin: 1rem 0;
     font-size: var(--font-size-text);
-    font-style: italic;
+    font-weight: 300;
+    /* font-style: italic; */
     line-height: var(--line-height);
 }
 
@@ -62,7 +63,8 @@
 
 .responsive__roles{
     font-size: var(--font-size-text);
-    font-style: italic;
+    font-weight: 300;
+    /* font-style: italic; */
 }
 
 .responsive__project-button_container{
@@ -76,7 +78,7 @@
 .responsive__project-btn{
     background: rgb(var(--primary-color));
     color: rgb(var(--text-color));
-    font-style: italic;
+    /* font-style: italic; */
     font-size: var(--font-size-annotations);
     padding: 0.7rem 1rem;
     border-radius: var(--border-radius);
