--- a/src/components/projects/roles/rolesLeft.css
+++ b/src/components/projects/roles/rolesLeft.css
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
 
-    font-style: italic;
+    /* font-style: italic; */
 }
 
 .roles__list{
