--- a/src/components/projects/roles/rolesRight.css
+++ b/src/components/projects/roles/rolesRight.css
@@ -23,7 +23,7 @@
     justify-content: center;
     align-items: center;
 
-    font-style: italic;
+    /* font-style: italic; */
 }
 
 .roles__list{
