--- a/src/components/titles/titles.css
+++ b/src/components/titles/titles.css
@@ -16,6 +16,7 @@
     position: relative;
     display: flex;
     font-size: var(--font-size-title);
+    font-weight: 400;
     justify-content: center;
     align-items: center;
 }
