--- a/src/containers/contact/contact.css
+++ b/src/containers/contact/contact.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
 
-    background: linear-gradient(rgb(var(--secondary-color)), 20%, rgb(var(--background-color)));
+    background: rgb(var(--background-color));
+    /* background: linear-gradient(rgb(var(--secondary-color)), 20%, rgb(var(--background-color))); */
 }
 
 .contact__container{
@@ -15,7 +16,7 @@
 .contact__text{
     text-align: center;
     margin-bottom: 5rem;
-    font-size: var(--font-text-size);
+    font-size: var(--font-size-text);
 }
 
 .contact__btn-container{
@@ -26,7 +27,7 @@
 
 .contact__btn{
     padding: 0.8rem 2rem;
-    font-size: var(--font-text-size);
+    font-size: var(--font-size-text);
     color: rgb(var(--text-color));
 
     border-radius: var(--border-radius);
