--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -2,6 +2,7 @@
     display: flex;
     width: auto;
     height: 90vh;
+    margin: 3rem;
     justify-content: center;
     align-items: center;
     /* background: linear-gradient(rgb(var(--background-color)), 80%, rgb(var(--secondary-color))); */
@@ -55,7 +56,7 @@ h1{
     align-items: center;
 }
 
-@media screen and (max-width: 500px) {    
+@media screen and (max-width: 500px) {   
     .description {
         font-size: var(--font-size-text);
     }
